--- a/sass/_grid-settings.scss
+++ b/sass/_grid-settings.scss
@@ -5,10 +5,10 @@
 // Change the grid settings
 
 // Si vols que es vegi la grid
-$visual-grid: true;
+$visual-grid: false;
 
 // parámateres de la grid
-$max-width: 1172px;
+$max-width: 1200px;
 $grid-columns: 12;
 $gutter: 0.08em;
 
