--- a/sass/_grid-settings.scss
+++ b/sass/_grid-settings.scss
@@ -5,12 +5,12 @@
 // Change the grid settings
 
 // Si vols que es vegi la grid
-$visual-grid: false;
+$visual-grid: true;
 
 // parámateres de la grid
 $max-width: 1200px;
 $grid-columns: 12;
-$gutter: 0.08em;
+$gutter: 0.1em;
 
 // com vols que es mostri el preview de la grid
 $visual-grid-index: front;
