--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,7 +34,11 @@ body{
 .full-width{
   width: 100%;
 }
-
+.contenidor-centre{
+  width: 100%;
+  @include no-space;
+  @include clearfix;
+}
 .contenidor-esquerra{
   @include span-columns(6);
   padding-top: 60px;
@@ -201,6 +205,7 @@ nav ul li a:hover{
 	margin: -50px auto auto auto;
   background-color: white;
   border: 1px solid #f2f2f2;
+  box-sizing: border-box;
  // Media Queries
       @include media($m) {
                 }
@@ -287,8 +292,6 @@ li:last-child{
     //
 }
 .forma1{
-  // width: auto;
-  // height: auto;
   border-radius: 50%;
   background: #fafafa;
 }
@@ -350,6 +353,7 @@ li:last-child{
   margin: -1px auto auto auto;
   background-color: white;
   border: 1px solid #f2f2f2;
+  box-sizing: border-box;
  // Media Queries
       @include media($m) {
                 }
@@ -433,7 +437,6 @@ li:last-child{
       }
 }
 
-
 /* ==========================================================================
 PIMES i Startups
 ========================================================================== */
@@ -442,6 +445,7 @@ PIMES i Startups
   margin: -1px auto auto auto;
   background-color: white;
   border: 1px solid #f2f2f2;
+  box-sizing: border-box;
  // Media Queries
       @include media($m) {
                 }
@@ -451,16 +455,66 @@ PIMES i Startups
                 }
     // 
 }
+
 //FOTOS
-.marc-foto-4{
-  width:340px;
-  height: 260px;
-  margin-top: 60px;
-  background-color: red;
-  border: 1px white solid;
+.bloc{
+  width:33.33%;
   float:left;
+  height: 260px;
+  background-color: green;
+  z-index: 9; 
+  margin: 60px auto;
+  padding: 0 10px 0 10px;
 }
 
+.image4{
+   z-index: 99;
+  // // MOBILE
+  // background-image: url(../img/img1_S.jpg); 
+  //     // RETINA
+  //     @include hidpi(2) {
+  //       background-image: url(../img/img1_S_@2x.jpg);  
+  //       background-size: 100%;
+  //     }
+  // // TABLET
+  // @include media($m) {
+  // background-image: url(../img/img1_M.jpg);  
+  //      // RETINA
+  //       @include hidpi(2) {
+  //         background-image: url(../img/img1_M_@2x.jpg);  
+  //         background-size: 100%;
+  //       }
+  //  }
+ // DESKTOP
+  @include media($l) {
+
+  background-image: url(../img/autonoms1_L.jpg);  
+       // RETINA
+        @include hidpi(2) {
+          background-image: url(../img/autonoms1_L_@2x.jpg);  
+          background-size: 100%;
+        }
+      }
+
+}
+.image5{
+  
+}
+.image6{
+  
+}
+// .marc-foto-5{
+//   @include span-columns(10.4);
+//   @include no-space;
+//   height: 330px; 
+//   background-color: blue;
+//   z-index: 1;
+// }
+#pimes .stroke-titol{
+  width: 290px;
+  margin: 4px auto;
+  border-bottom: 2px solid #f5f5f5;
+}
 
 #pimes h2{
   text-align: center;
